force-app/main/default/objects/OpportunityLineItem/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <formula>PricebookEntry.Product2.Branch__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch</label>
    <type>Text</type>
</CustomField>