force-app/main/default/objects/OpportunityLineItem/fields/Branch_Lkp__c.field-meta.xml
<CustomField>
    <fullName>Branch_Lkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch Lkp</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Branch__c.Active_for_Campaigns__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>