force-app/main/default/objects/OpportunityLineItem/fields/fActive_Product__c.field-meta.xml
<CustomField>
    <fullName>fActive_Product__c</fullName>
    <formula>IF( AND(   ISPICKVAL(Opportunity.StageName, &quot;DocuSign Sent&quot;)   ,   NOT( Opportunity.Deactivated__c )) , TRUE, FALSE)</formula>
    <label>fActive Product</label>
    <type>Checkbox</type>
</CustomField>