force-app/main/default/objects/OpportunityLineItem/fields/fOpportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>fOpportunity_Amount__c</fullName>
    <formula>Opportunity.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fOpportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>