force-app/main/default/objects/OpportunityLineItem/fields/fOpportunity_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>fOpportunity_Record_Type__c</fullName>
    <formula>Opportunity.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fOpportunity Record Type</label>
    <type>Text</type>
</CustomField>