force-app/main/default/objects/OpportunityLineItem/fields/fProduct_Family__c.field-meta.xml
<CustomField>
    <fullName>fProduct_Family__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fProduct Family</label>
    <type>Text</type>
</CustomField>