force-app/main/default/objects/OpportunityLineItem/fields/Hot_Lead_Delivery_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Hot_Lead_Delivery_Frequency__c</fullName>
    <label>Hot Lead Delivery Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>