force-app/main/default/objects/OpportunityLineItem/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <formula>PricebookEntry.Product2.Industry__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry</label>
    <type>Text</type>
</CustomField>