force-app/main/default/objects/OpportunityLineItem/fields/Opportunity_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product_Family__c</fullName>
    <label>Opportunity Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>CPL</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>