force-app/main/default/objects/OpportunityLineItem/fields/PriceBook_Name__c.field-meta.xml
<CustomField>
    <fullName>PriceBook_Name__c</fullName>
    <formula>Opportunity.Pricebook2.Name</formula>
    <label>PriceBook Name</label>
    <type>Text</type>
</CustomField>