force-app/main/default/objects/OpportunityLineItem/fields/ServiceEndDate__c.field-meta.xml
<CustomField>
    <fullName>ServiceEndDate__c</fullName>
    <label>Service End Date</label>
    <type>Date</type>
</CustomField>