force-app/main/default/objects/OpportunityLineItem/validationRules/Hot_Lead_Branch.validationRule-meta.xml
<ValidationRule>
    <fullName>Hot_Lead_Branch</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Product_Name__c = &quot;Hot Leads&quot;,
    ISPICKVAL( Hot_Leads_Branch__c , &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Hot_Leads_Branch__c</errorDisplayField>
    <errorMessage>You must choose a Hot lead Branch</errorMessage>
</ValidationRule>